--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_bloc: ^8.1.2
   flutter_svg: ^2.0.6
   flutter_native_splash: ^2.3.0
+  image_picker: ^0.8.7+5
+  dotted_border: ^2.0.0+3
 
 dev_dependencies:
   flutter_test:
