--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_native_splash: ^2.3.0
   image_picker: ^0.8.7+5
   dotted_border: ^2.0.0+3
+  cached_network_image: ^3.2.3
+  shared_preferences: ^2.1.1
 
 dev_dependencies:
   flutter_test:
